--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ad veritatis natus facere itaque. 
+            Velit et labore quod officiis ipsa minima earum 
+            quam optio eius, quidem minus iste laudantium eligendi!</p>
     <script src="app.js"></script>
 </body>
 </html>
